# python-build-backend-benchmarks

./: .dockerignore  Dockerfile  README.md
benchmark-orchestrator/: benchmark_results.json  pyproject.toml
benchmark-orchestrator/src/benchmark_orchestrator/: __init__.py  benchmark_utils.py  results_handler.py  run_benchmarks.py  summarize_results.py
results/: multi-core-benchmark.json  single-core-benchmark.json
