[project]
name = "benchmark-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrej Velichkovski", email = "andrej.velichkovski@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
benchmark-orchestrator = "benchmark_orchestrator:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
